// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render should render List page 1`] = `
<Page
  navModel={
    Object {
      "main": Object {
        "text": "Configuration",
      },
      "node": Object {
        "text": "Users",
      },
    }
  }
>
  <PageContents
    isLoading={false}
  >
    <Connect(UsersActionBar)
      onShowInvites={[Function]}
      showInvites={false}
    />
    <UsersTable
      onRemoveUser={[Function]}
      onRoleChange={[Function]}
      users={Array []}
    />
  </PageContents>
</Page>
`;

exports[`Render should render component 1`] = `
<Page
  navModel={
    Object {
      "main": Object {
        "text": "Configuration",
      },
      "node": Object {
        "text": "Users",
      },
    }
  }
>
  <PageContents
    isLoading={true}
  >
    <Connect(UsersActionBar)
      onShowInvites={[Function]}
      showInvites={false}
    />
  </PageContents>
</Page>
`;
